<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rateStoreTitleMaterialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_stars_24"
            android:drawablePadding="7dp"
            android:text="@string/rate_store"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/rateStoreNameMaterialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/store_name"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="italic" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/rateStoreAppCompatRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--        style="?android:attr/ratingBarStyleSmall"-->

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reviewStoreTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="top"
            android:hint="@string/store_review"
            android:lines="5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rateMaterialButton"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/rate"
            android:textSize="22sp"
            android:textStyle="bold"
            app:backgroundTint="@color/toolbar_dark_green" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>