<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".UI.Fragments.DeliveryAddressDialogFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addDeliveryAddressMaterialToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar_dark_green"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/deliveryAddressTitleMaterialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_delivery_address"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/addDeliveryAddressNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/nameLinearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="200">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout.OutlinedBox.ClearText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="100"
                    android:hint="@string/first_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deliveryFirstNameTextInputEditText"
                        style="@style/TextInputEditText.OutlinedBox.ClearText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout.OutlinedBox.ClearText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="100"
                    android:hint="@string/last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/deliveryLastNameTextInputEditText"
                        style="@style/TextInputEditText.OutlinedBox.ClearText" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryMobTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/mob_no_asterix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deliveryMobTextInputEditText"
                    style="@style/TextInputEditText.OutlinedBox.ClearText"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryStreetAddressTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/street_address_asterix">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deliveryStreetAddressTextInputEditText"
                    style="@style/TextInputEditText.OutlinedBox.ClearText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/landmarkTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_marginTop="5dp"
                android:hint="@string/landmark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deliveryLandmarkTextInputEditText"
                    style="@style/TextInputEditText.OutlinedBox.ClearText" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zipcodeTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_marginTop="5dp"
                android:hint="@string/zipcode_asterix"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/deliveryZipcodeTextInputEditText"
                    style="@style/TextInputEditText.OutlinedBox.ClearText"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryStateTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_marginTop="5dp"
                android:hint="@string/state_asterix"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/deliveryStateMaterialAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingHorizontal="15dp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/deliveryCityTextInputLayout"
                style="@style/TextInputLayout.OutlinedBox.ClearText"
                android:layout_marginTop="5dp"
                android:hint="@string/city_asterix"
                app:endIconMode="dropdown_menu"
                app:errorEnabled="true">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/deliveryCityMaterialAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:paddingHorizontal="15dp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addDeliveryAddressMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="15dp"
                android:text="@string/add"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>