<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <com.google.android.material.appbar.MaterialToolbar-->
    <!--        android:id="@+id/forgotPasswordMaterialToolbar"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="?attr/actionBarSize"-->
    <!--        android:background="@color/toolbar_dark_green"-->
    <!--        android:elevation="4dp"-->
    <!--        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:title="Forgot Password"-->
    <!--        app:titleCentered="true" />-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/forgotPasswordLinearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_mobileNoTextInputLayout"
            style="@style/TextInputLayout.OutlinedBox.ClearText"
            android:hint="@string/mobile_number_asterix"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/forgotMobileNoTextInputEditText"
                style="@style/TextInputEditText.OutlinedBox.ClearText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_sendOTPMaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="7dp"
            android:padding="10dp"
            android:text="@string/send_otp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enterOTPTextInputLayout"
            style="@style/TextInputLayout.OutlinedBox.ClearText"
            android:layout_below="@+id/signUpMobileNoLinearLayoutCompat"
            android:layout_marginTop="7dp"
            android:hint="@string/enter_otp_asterix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterOTPTextInputEditText"
                style="@style/TextInputEditText.OutlinedBox.ClearText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/forgot_passwordTextInputLayout"
            style="@style/TextInputLayout.OutlinedBox.ClearText"
            android:layout_below="@+id/login_mobileNoTextInputLayout"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newPasswordTextInputEditText"
                style="@style/TextInputEditText.OutlinedBox.ClearText"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPasswordMaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_passwordTextInputLayout"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:padding="25dp"
            android:text="@string/reset_password"
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>